haskell-font-lock-symbols

--- a/isg-init.org
+++ b/isg-init.org
@@ -696,7 +696,24 @@
   (use-package haskell-mode
     :mode "\\.hs\\'"
     :init
-    (add-hook 'haskell-mode-hook 'intero-mode))
+    (add-hook 'haskell-mode-hook 'intero-mode)
+    (setq haskell-font-lock-symbols t
+          haskell-font-lock-symbols-alist '(("\\" . "λ")
+                                            ("->" . "→")
+                                            ("<-" . "←")
+                                            ("=>" . "⇒")
+                                            ("()" . "∅")
+                                            ("==" . "≡")
+                                            ("/=" . "≢")
+                                            (">=" . "≥")
+                                            ("<=" . "≤")
+                                            ("&&" . "∧")
+                                            ("||" . "∨")
+                                            ("sqrt" . "√")
+                                            ("undefined" . "⊥")
+                                            ("pi" . "π")
+                                            ("." "∘" haskell-font-lock-dot-is-not-composition)
+                                            ("forall" . "∀"))))
 #+END_SRC
 
 
