doc for avy-goto-char-timer

--- a/isg-init.org
+++ b/isg-init.org
@@ -27,6 +27,7 @@
   |              |             |                                                  |
   | Navigation   | C-spc C-spc | set mark, push onto mark ring                    |
   |              | C-u C-spc   | restore mark from mark ring                      |
+  |              | M-h         | avy-goto-char-timer                              |
   |--------------+-------------+--------------------------------------------------|
 
   |-----------+---------+---------------------------------------|
