--- a/isg-init.org
+++ b/isg-init.org
@@ -527,7 +527,7 @@
                           (progn
                             (save-buffer)
                             (kill-new (format "%s" (or (thing-at-point 'symbol) "")))
-                            (counsel-grep))
+                            (counsel-grep-or-swiper))
                         ;; otherwise stick to the normal isearch-forward
                         (isearch-forward))))
 
@@ -554,14 +554,18 @@
     "
         Counsel search
         ----------------------------------------------------
-        _r_: ripgrep  _d_: rgrep
-        _g_: git (file) _f_: find file
-        _u_: function _v_: variable  _l_: library _s_: symbol
+        Buffer   : _c_: counsel-grep  _o_: counsel-grep-or-swiper
+        Files    : _r_: ripgrep       _d_: rgrep
+        Filenames: _g_: git (file)    _f_: find file
+        Misc     : _u_: function      _v_: variable  _l_: library _s_: symbol
         "
     ("r" (lambda ()
            (interactive)
            (counsel-rg (format "%s" (or (thing-at-point 'symbol) "")))))
     ("d" rgrep)
+
+    ("c" counsel-grep)
+    ("o" counsel-grep-or-swiper)
 
     ("f" counsel-find-file)
     ("g" counsel-git)
