--- a/isg-init.org
+++ b/isg-init.org
@@ -606,7 +606,8 @@
       (define-key company-active-map (kbd "C-n") 'company-select-next)
       (define-key company-active-map (kbd "C-p") 'company-select-previous)))
 
-  (use-package company-eshell-autosuggest
+  (use-package esh-autosuggest
+    :hook (eshell-mode . esh-autosuggest-mode)
     :ensure t)
 #+END_SRC
 
@@ -1170,13 +1171,6 @@ _DEL_: none
     (if (string= "" shell-name)
         (rename-uniquely)
       (rename-buffer shell-name)))
-
-  (defun setup-company-eshell-autosuggest ()
-    (with-eval-after-load 'company
-      (setq-local company-backends '(company-eshell-autosuggest))
-      (setq-local company-frontends '(company-preview-frontend))))
-
-  (add-hook 'eshell-mode-hook 'setup-company-eshell-autosuggest)
 #+END_SRC
 
 ** exec-path-from-shell
