--- a/isg-init.org
+++ b/isg-init.org
@@ -3,6 +3,7 @@
   | Section      | Key         | Command                                          |
   |--------------+-------------+--------------------------------------------------|
   | Misc.        | M-/         | dabbrev-expand                                   |
+  |              | M-x imenu   | list all functions and top-level variables       |
   |              |             |                                                  |
   | Undo         | C-/         | undo-tree-undo                                   |
   |              | C-M-/       | hydra-undo-tree/body                             |
@@ -33,7 +34,6 @@
   |--------------+-------------+--------------------------------------------------|
 
 
-
   |---------------+---------+---------------------|
   | [[magit]]         |         |                     |
   |---------------+---------+---------------------|
@@ -58,7 +58,8 @@
   | Stashing (z)  |         |                     |
   |               |         |                     |
   | Merging (m)   |         |                     |
-  |               |         |                     |
+  |---------------+---------+---------------------|
+
 
   |-----------+---------+---------------------------------------|
   | Registers | C-x r   | Prefix all commands with C-x r        |
