--- a/isg-init.org
+++ b/isg-init.org
@@ -191,6 +191,8 @@
                         (logical-and #X2227)
                         (logical-or #X2228)
                         (logical-neg #X00AC)
+                        (nary-logical-and #X22C0)
+                        (capital-lambda #X039B)
                         ('nil #X2205)
                         (horizontal-ellipsis #X2026)
                         (double-exclamation #X203C)
@@ -224,6 +226,16 @@
                 (isg/substitute-pattern-with-unicode (car x)
                                                      (cdr x)))
             patterns))
+
+  (defun isg/correct-symbol-bounds (pretty-alist)
+    "Prepend a TAB character to each symbol in this alist,
+  this way compose-region called by prettify-symbols-mode
+  will use the correct width of the symbols
+  instead of the width measured by char-width."
+    (mapcar (lambda (el)
+              (setcdr el (string ?\t (cdr el)))
+              el)
+            pretty-alist))
 #+END_SRC
 
 * machine settings
@@ -492,7 +504,6 @@
   ;;   (add-hook 'org-capture-after-finalize-hook (lambda () (org-gcal-sync))))
 #+END_SRC
 
-
 ** hydra
  #+BEGIN_SRC emacs-lisp
  (use-package hydra
@@ -653,6 +664,32 @@
 #+END_SRC
 
 * language modes
+** language prep
+#+BEGIN_SRC emacs-lisp
+  ;; the ligature config code uses -iterate and -zip-pair
+  (use-package dash
+    :demand t)
+
+  ;; https://github.com/i-tu/Hasklig/issues/84
+
+  (defun my-ligature-list (ligatures codepoint-start)
+    "Create an alist of strings to replace with
+  codepoints starting from codepoint-start."
+    (let ((codepoints (-iterate '1+ codepoint-start (length ligatures))))
+      (-zip-pair ligatures codepoints)))
+
+  ; list can be found at https://github.com/i-tu/Hasklig/blob/master/GlyphOrderAndAliasDB#L1588
+  (defvar my-hasklig-ligatures
+        (let* ((ligs '("&&" "***" "*>" "\\\\" "||" "|>" "::"
+                       "==" "===" "==>" "=>" "=<<" "!!" ">>"
+                       ">>=" ">>>" ">>-" ">-" "->" "-<" "-<<"
+                       "<*" "<*>" "<|" "<|>" "<$>" "<>" "<-"
+                       "<<" "<<<" "<+>" ".." "..." "++" "+++"
+                       "/=" ":::" ">=>" "->>" "<=>" "<=<" "<->")))
+          (isg/correct-symbol-bounds (my-ligature-list ligs #Xe100))))
+#+END_SRC
+
+
 ** c
  #+BEGIN_SRC emacs-lisp
    (add-hook 'c-mode-hook (lambda ()
@@ -783,39 +820,6 @@
   | C-c ! p     | jump to previous error                         |
 
 #+BEGIN_SRC emacs-lisp
-
-  ;; the haskell config code uses -iterate and -zip-pair
-  (use-package dash
-    :demand t)
-
-  ;; https://github.com/i-tu/Hasklig/issues/84
-
-  (defun my-correct-symbol-bounds (pretty-alist)
-    "Prepend a TAB character to each symbol in this alist,
-  this way compose-region called by prettify-symbols-mode
-  will use the correct width of the symbols
-  instead of the width measured by char-width."
-    (mapcar (lambda (el)
-              (setcdr el (string ?\t (cdr el)))
-              el)
-            pretty-alist))
-
-  (defun my-ligature-list (ligatures codepoint-start)
-    "Create an alist of strings to replace with
-  codepoints starting from codepoint-start."
-    (let ((codepoints (-iterate '1+ codepoint-start (length ligatures))))
-      (-zip-pair ligatures codepoints)))
-
-  ; list can be found at https://github.com/i-tu/Hasklig/blob/master/GlyphOrderAndAliasDB#L1588
-  (defvar my-hasklig-ligatures
-        (let* ((ligs '("&&" "***" "*>" "\\\\" "||" "|>" "::"
-                       "==" "===" "==>" "=>" "=<<" "!!" ">>"
-                       ">>=" ">>>" ">>-" ">-" "->" "-<" "-<<"
-                       "<*" "<*>" "<|" "<|>" "<$>" "<>" "<-"
-                       "<<" "<<<" "<+>" ".." "..." "++" "+++"
-                       "/=" ":::" ">=>" "->>" "<=>" "<=<" "<->")))
-          (my-correct-symbol-bounds (my-ligature-list ligs #Xe100))))
-
   (defun isg/haskell-config ()
     (interactive)
     (intero-mode)
@@ -877,6 +881,8 @@
  #+END_SRC
 
 ** purescript
+
+
 #+BEGIN_SRC emacs-lisp
   (use-package purescript-mode
     :mode "\\.purs\\'"
@@ -886,18 +892,19 @@
 
   (defun substitute-purescript-syntax-with-unicode ()
     (isg/substitute-patterns-with-unicode
-     (list (cons "\\(<-\\)" 'left-arrow)
-           (cons "\\(->\\)" 'right-arrow)
-           (cons "\\(/=\\)" 'not-equal)
+     (list ;(cons "\\(<-\\)" 'left-arrow)
+           ;(cons "\\(->\\)" 'right-arrow)
+           ;(cons "\\(/=\\)" 'not-equal)
            (cons "\\(()\\)" 'nil)
+           (cons "\\(/\\\\\\)" 'capital-lambda) ; /\ : should be nary-logical-and but that looks bad
            (cons "\\<\\(forall\\)\\>" 'for-all)
-           (cons "\\(&&\\)" 'logical-and)
-           (cons "\\(||\\)" 'logical-or)
+           ;(cons "\\(&&\\)" 'logical-and)
+           ;(cons "\\(||\\)" 'logical-or)
            (cons "\\<\\(not\\)\\>" 'logical-neg)
-           (cons "\\(>\\)\\[^=\\]" 'greater-than)
-           (cons "\\(<\\)\\[^=\\]" 'less-than)
-           (cons "[^>]\\(>=\\)" 'greater-than-or-equal-to) ; substitute >= but ignore >>=
-           (cons "\\(<=\\)" 'less-than-or-equal-to)
+           ;(cons "\\(>\\)\\[^=\\]" 'greater-than)
+           ;(cons "\\(<\\)\\[^=\\]" 'less-than)
+           ;(cons "[^>]\\(>=\\)" 'greater-than-or-equal-to) ; substitute >= but ignore >>=
+           ;(cons "\\(<=\\)" 'less-than-or-equal-to)
            (cons "\\(''\\)" 'double-prime)
            (cons "\\('\\)" 'prime))))
 
@@ -907,8 +914,15 @@
     (company-mode)
     (flycheck-mode)
     (turn-on-purescript-indentation)
-    ;;(substitute-purescript-syntax-with-unicode)
-    )
+
+    (substitute-purescript-syntax-with-unicode)
+
+    ;; use the Hasklig font for Purescript mode
+    (setq buffer-face-mode-face '(:family "Hasklig"))
+    (buffer-face-mode)
+    ;; nice glyphs for purescript with hasklig
+    (setq prettify-symbols-alist (append my-hasklig-ligatures prettify-symbols-alist))
+    (prettify-symbols-mode))
 #+END_SRC
 
    purescript syntax:
